# RATAE

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: com.thp.cc.cmi-plausibility.plist  deploy.sh  migrate_0054_telemetry_setpoints.sql  migrate_0055_telemetry_eta.sql  migrate_0056_eta_validation_view.sql  migrate_0058_cmi_cartography.sql  postgres-init.sh
deploy/systemd/: wp-state-machine.service
docs/: AUTOMATION-LEGIO-PLAN.md  AUTOMATION-PV-SURPLUS-PLAN.md  CMI-MODBUS-CONFIG-IST.md  CMI-WRITE-API.md  COMPACT-2026-05-06.md  COMPACT-2026-05-08.md  ROADMAP.md  STATE-SUB-LOGIK.md  TODO.md  WP-SCRIPTS-INVENTORY.md
src/wp_state_machine/: __init__.py  __main__.py  config.py  safety.py
tests/: conftest.py
tests/e2e/: README.md  conftest.py  test_dashboard_smoke.py
tests/fixtures/: coe_packets.json
tests/integration/: test_modbus_to_state.py  test_scraper_convergence.py
tests/unit/: test_coe_listener.py  test_config.py  test_health.py  test_json_poller.py  test_modbus_slave.py  test_models.py  test_plausibility.py  test_postgres.py  test_rest.py  test_safety.py  test_safety_dry_run.py  test_setpoints_logger.py  test_snapshot_setpoints.py  test_web_scraper.py
tools/: cmi_bulk_modbus_digital.py  cmi_bulk_modbus_setup.py  cmi_bulk_set_target_ip.py  cmi_crawl_all_pages.py  cmi_factory_clear.py  cmi_map_can_input.py  cmi_playwright_probe.py  cmi_read_modbus_outputs.py  cmi_reset_modbus_outputs.py  cmi_setup_analog_inputs.py  cmi_setup_can_inputs.py  cmi_setup_coe_outputs.py  cmi_setup_modbus_outputs.py  cmi_verify_full.py  coe_listener_diag.py  modbus_test_slave.py  plausibility_check.py
(+40 files in other folders)
