[project]
name = "wp-state-machine"
version = "0.2.1"
description = "WP State Machine — zentrale Steuerung Waermepumpe via CMI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Thomas Pierschke"}]

dependencies = [
    "fastapi>=0.110,<0.112",
    "uvicorn[standard]>=0.27,<0.30",
    "aiohttp>=3.9,<3.12",
    "asyncpg>=0.29,<0.31",
    "pydantic>=2.6,<2.10",
    "pydantic-settings>=2.2,<2.5",
    "beautifulsoup4>=4.12,<4.14",
    "lxml>=5.1,<5.4",
    "toml>=0.10,<0.12",
    "paho-mqtt>=2.0,<2.2",
    "python-multipart>=0.0.9,<0.0.12",
    "httpx>=0.27,<0.29",
    "sse-starlette>=2.0,<2.3",
    "python-telegram-bot>=21.0,<22.0",
    "pymodbus>=3.7,<3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<8.4",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=5.0,<5.2",
    "httpx>=0.27,<0.29",
    "ruff>=0.4,<0.6",
    "black>=24.0,<25.0",
    "respx>=0.21,<0.22",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
# Default run skips e2e: those boot a real subprocess + headless Chromium and
# pollute the asyncio fixtures of the unit/integration suite. Run with:
#   PYTHONPATH=src python3 -m pytest tests/e2e
addopts = "-v --no-header --ignore=tests/e2e"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
